--- a/eleven_lab_test.ipynb
+++ b/eleven_lab_test.ipynb
@@ -12,7 +12,9 @@
     "import elevenlabs\n",
     "from IPython.display import Audio, display\n",
     "import IPython.display as ipd\n",
-    "from config import OPENAI_API_KEY, ELEVENLABS_API_KEY\n",
+    "\n",
+    "OPENAI_API_KEY = input("OPENAI_API_KEY : )\n"
+    "ELEVENLABS_API_KEY = input("ELEVENLABS_API_KEY : ")\n"
     "\n",
     "openai.api_key = OPENAI_API_KEY\n",
     "elevenlabs.set_api_key(ELEVENLABS_API_KEY)\n",
