--- a/eleven_lab_test.ipynb
+++ b/eleven_lab_test.ipynb
@@ -13,7 +13,7 @@
     "from IPython.display import Audio, display\n",
     "import IPython.display as ipd\n",
     "\n",
-    "OPENAI_API_KEY = input("OPENAI_API_KEY : )\n"
+    "OPENAI_API_KEY = input("OPENAI_API_KEY :" )\n"
     "ELEVENLABS_API_KEY = input("ELEVENLABS_API_KEY : ")\n"
     "\n",
     "openai.api_key = OPENAI_API_KEY\n",
