--- a/eleven_lab_test.ipynb
+++ b/eleven_lab_test.ipynb
@@ -15,6 +15,7 @@
     "\n",
     "OPENAI_API_KEY = input('OPENAI_API_KEY :')\n",
     "ELEVENLABS_API_KEY = input('ELEVENLABS_API_KEY : ')\n",
+    "prompt = input('user_prompt: ')\n",
     "\n",
     "openai.api_key = OPENAI_API_KEY\n",
     "elevenlabs.set_api_key(ELEVENLABS_API_KEY)\n",
@@ -23,7 +24,7 @@
     "    response = openai.ChatCompletion.create(\n",
     "        model=\"gpt-4\",  # Assurez-vous d'utiliser le bon identifiant de modèle ici\n",
     "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"Vous êtes la copine de l'utilisateur, répondez de manière concise et sexy. Ne dis pas que tu es une intelligence artificielle\"},\n",
+    "            {\"role\": \"system\", \"content\":prompt},\n",
     "            {\"role\": \"user\", \"content\": user_message},\n",
     "        ],\n",
     "        temperature=0.7,\n",
